--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@types/styled-components": "^5.0.0",
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^3.0.0",
-    "gatsby-image": "^3.0.0",
     "gatsby-plugin-google-analytics": "^3.0.0",
+    "gatsby-plugin-image": "^1.14.1",
     "gatsby-plugin-manifest": "^3.0.0",
     "gatsby-plugin-offline": "^4.0.0",
     "gatsby-plugin-react-helmet": "^4.0.0",
