--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@fortawesome/free-brands-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
-    "@material-ui/core": "^4.8.1",
-    "@material-ui/types": "^5.0.0",
+    "@mui/material": "^5.0.3",
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
+    "@mui/styled-engine-sc": "^5.0.3",
+    "@mui/types": "^7.0.0",
     "@types/react": "^17.0.0",
     "@types/styled-components": "^5.0.0",
     "babel-plugin-styled-components": "^1.10.6",
@@ -34,6 +36,9 @@
   },
   "devDependencies": {
     "prettier": "^2.0.0"
+  },
+  "resolutions": {
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
   },
   "keywords": [
     "gatsby"
