--- a/package.json
+++ b/package.json
@@ -36,7 +36,14 @@
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
-    "prettier": "^2.0.0"
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.8",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
+    "prettier": "^2.0.0",
+    "typescript": "^4.4.4"
   },
   "resolutions": {
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
@@ -46,7 +53,8 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
+    "typecheck": "tsc --noEmit",
+    "build": "npm run typecheck && gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
