--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "typecheck": "tsc --noEmit",
     "build": "npm run typecheck && gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "format": "prettier --write \"**/*.{js,jsx,json,md,ts,tsx}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "lint": "yarn run typecheck",
