--- a/package.json
+++ b/package.json
@@ -42,10 +42,6 @@
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-plugin-react": "^7.26.1",
     "prettier": "^2.0.0",
     "typescript": "^4.4.4"
   },
@@ -60,10 +56,9 @@
     "typecheck": "tsc --noEmit",
     "build": "npm run typecheck && gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md,ts,tsx}\"",
+    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "lint": "yarn run typecheck && yarn run eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
