Run lint on build (instead of just typecheck)

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   "license": "MIT",
   "scripts": {
     "typecheck": "tsc --noEmit",
-    "build": "npm run typecheck && gatsby build",
+    "build": "npm run lint && gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md,ts,tsx}\"",
     "start": "npm run develop",
